--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.Team7cafeserver"
         tools:targetApi="31">
         <activity
+            android:name=".CategoryMenuActivity"
+            android:exported="false"
+            android:label="@string/title_activity_category_menu"
+            android:theme="@style/Theme.Team7cafeserver.NoActionBar">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".LoginActivity"
             android:exported="false">
             <meta-data
