--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Team7cafeserver"
         tools:targetApi="31">
+        <service
+            android:name=".ListenOrder"
+            android:enabled="true"
+            android:exported="true"></service>
+
         <activity
             android:name=".OrderStatusChangeActivity"
             android:exported="false">
