--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Team7cafeserver"
         tools:targetApi="31">
+        <activity
+            android:name=".CouponActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+
         <service
             android:name=".ListenOrder"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
 
         <activity
             android:name=".OrderStatusChangeActivity"
